Refactor user avatar macro

--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -24,7 +24,7 @@
                             " class="avatar-popover" data-original-title="<strong>{{account.name}}</strong>
                              ">
                             <div class="shadow img-circle shadow-circle">
-                                {{ helper.render_user_thumbnail(account, upload_method, class="img-circle") }}
+                                {{ helper.render_user_avatar(account, upload_method, class="img-circle") }}
                             </div>
                         </a>
                         </li>
