--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -79,7 +79,7 @@
                     " class="avatar-popover" data-original-title="<strong>{{user.name}}</strong>
                      ">
                     <div class="shadow img-circle shadow-circle">
-                        {{ account_helper.render_user_thumbnail(user, upload_method, class="img-circle") }}
+                        {{ account_helper.render_user_avatar(user, upload_method) }}
                     </div>
                 </a>
                 <p class="label label-danger">{{user.score}}</p>
