--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -19,7 +19,7 @@
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                     <div class="center-block img-overlay-container">
                         <div class="shadow shadow-circle">
-                            {{ helper.render_user_thumbnail(current_user, upload_method, class="img-circle profile-image img-responsive center-block", size='200x200')}}
+                            {{ helper.render_user_avatar(current_user, upload_method, width="200")}}
                         </div>
                         <div class="img-overlay img-circle edit-profile-image">
                             <i class="fa fa-pencil-square-o fa-3x"></i>
