--- a/templates/projects/auditlog.html
+++ b/templates/projects/auditlog.html
@@ -1,12 +1,10 @@
 {% extends "/base.html" %}
 {% set active_page = "projects" %}
 {% import "projects/_helpers.html" as helper %}
-{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-
 {% if project %}
-{{ render_local_nav(current_user, 'auditlog', project.short_name) }}
+{{ helper.render_project_local_nav(project, 'auditlog', current_user, pro_features) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
