--- a/templates/projects/non_stats.html
+++ b/templates/projects/non_stats.html
@@ -1,10 +1,9 @@
 {% extends "/base.html" %}
 {% set active_page = "projects" %}
 {% import "projects/_helpers.html" as helper %}
-{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{{ render_local_nav(current_user, "statistics", project.short_name) }}
+{{ helper.render_project_local_nav(project, 'nostats', current_user, pro_features) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
