--- a/templates/projects/task_scheduler.html
+++ b/templates/projects/task_scheduler.html
@@ -2,12 +2,11 @@
 {% set active_page = "projects" %}
 {% import "projects/_helpers.html" as helper %}
 {% from "_formhelpers.html" import render_field %}
-{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 
 {% if project %}
-{{ render_local_nav(current_user, "tasks", project.short_name) }}
+{{ helper.render_project_local_nav(project, 'scheduler', current_user, pro_features) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
