--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -1,12 +1,11 @@
 {% extends "/base.html" %}
 {% set active_page = "projects" %}
 {% import "projects/_helpers.html" as helper %}
-{% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 
 {% if project %}
-{{ render_local_nav(current_user, "tasks", project.short_name) }}
+{{ helper.render_project_local_nav(project, 'tasks', current_user, pro_features) }}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <div class="container container-main">
     <div class="row">
