--- a/templates/projects/update_blogpost.html
+++ b/templates/projects/update_blogpost.html
@@ -1,11 +1,10 @@
 {% extends "/base.html" %}
 {% set active_page = "blog" %}
 {% import "projects/_helpers.html" as helper %}
-{% from "admin/_helpers.html" import render_local_nav %}
 {% from "_formhelpers.html" import render_field %}
 
 {% block content %}
-{{ render_local_nav(current_user, "blog") }}
+{{ helper.render_project_local_nav(project, 'updateblog', current_user, pro_features) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-xs-12">
