--- a/templates/projects/new.html
+++ b/templates/projects/new.html
@@ -6,24 +6,19 @@
 {% from "_formhelpers.html" import render_field %}
 
 {% block content %}
-{{ helper.render_account_local_nav(current_user, active_link) }}
 <div class="container container-main">
-    <div id="project-form" class="row">
-        <div class="col-sm-9 col-sm-offset-3">
+    <div class="row">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1">
             {% include "_flash_messages.html" %}
-            <h2 class="text-center">Create a new project</h2>
+            <h1>Create a new project</h1>
+            <hr>
+
             <form role="form" method="post" action="{{ url_for('project.new')}}" enctype="multipart/form-data">
                 {{ form.hidden_tag() }}
                 <fieldset>
-                    {{ render_field(form.name, placeholder="Name", class="form-control", required="required", autofocus="autofocus") }}
-                    {{ render_field(form.short_name, placeholder="Abbreviated name for the project", label_text="Short name:", class="form-control", required="required") }}
-                    {{ render_field(form.long_description, class="form-control", rows="13", placeholder="Long description:
-
-                    · Describe the purpose of the project and what it aims to achieve.
-                    · Explain how the project works and how volunteers can help.
-                    · Highlight the reasons why volunteers contributions are essential.
-
-                    You can use Markdown to format your description.", required="required") }}
+                    {{ render_field(form.name, placeholder="Title", label_text="Title", show_label=True, class="form-control", required="required", autofocus="autofocus") }}
+                    {{ render_field(form.short_name, placeholder="Abbreviated title", label_text="Abbreviated name", show_label=True, class="form-control", required="required") }}
+                    {{ render_field(form.long_description, class="form-control", rows="13", label_text="Long description", show_label=True, placeholder="Long description (use Markdown)!", required="required") }}
                     <div class="pull-right" role="group">
                         <a href="{{url_for('account.profile', name=current_user.name)}}" class="btn btn-default">Cancel</a>
                         <input type="submit" value="Create" class="btn btn-success" />
