Rename set-main-bg -> set-body-bg

--- a/templates/projects/export.html
+++ b/templates/projects/export.html
@@ -5,7 +5,7 @@
 {% from "_formhelpers.html" import render_field %}
 
 {% block content %}
-<span class="set-main-bg" data-bg="pattern-white-wall"></span>
+<span class="set-body-bg" data-bg="pattern-white-wall"></span>
 {{ helper.render_project_local_nav(project, 'export', current_user, pro_features) }}
 <div class="container container-main">
     <div class="row">
