--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -5,7 +5,7 @@
 
 
 {% block content %}
-<span class="set-main-bg" data-bg="pattern-brushed"></span>
+<span class="set-body-bg" data-bg="pattern-brushed"></span>
 <div class="container container-main">
     <div class="row">
         <div class="col-xs-12">
