--- a/templates/account/account_validation.html
+++ b/templates/account/account_validation.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<span class="set-main-bg" data-bg="pattern-white-wall"></span>
+<span class="set-body-bg" data-bg="pattern-white-wall"></span>
 <div class="container container-main">
     <div class="row">
         <div class="col-xs-12">
