--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -9,7 +9,7 @@
 {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
     {{ privacy.render_lock_page() }}
 {% else %}
-<span class="set-main-bg" data-bg="pattern-white-wall"></span>
+<span class="set-body-bg" data-bg="pattern-white-wall"></span>
 <div class="container-main">
     <section class="container">
         {% include "_flash_messages.html" %}
