--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -4,7 +4,7 @@
 {% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
-<span class="set-main-bg" data-bg="pattern-white-wall"></span>
+<span class="set-body-bg" data-bg="pattern-white-wall"></span>
 {{ render_admin_local_nav(current_user, active_link) }}
 <div class="container container-main">
     <div class="row">
