--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <script src="{{url_for('static', filename='js/vendor/isotope.pkgd.min.js')}}"></script>
-<span class="set-main-bg" data-bg="pattern-white-wall"></span>
+<span class="set-body-bg" data-bg="pattern-white-wall"></span>
 <section class="pattern-classy-fabric">
     <div class="container padding-top-lg">
         <div class="col-xs-10 col-xs-offset-1">
