--- a/templates/projects/task_import_options.html
+++ b/templates/projects/task_import_options.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 {{ helper.render_project_local_nav(project, 'auditlog', current_user, pro_features) }}
-<span class="set-main-bg" data-bg="pattern-white-wall"></span>
+<span class="set-body-bg" data-bg="pattern-white-wall"></span>
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
