--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -6,7 +6,7 @@
 
 {% if project %}
 {{ helper.render_project_local_nav(project, 'tasks', current_user, pro_features) }}
-<span class="set-main-bg" data-bg="pattern-white-wall"></span>
+<span class="set-body-bg" data-bg="pattern-white-wall"></span>
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
