Fix column class

--- a/templates/401.html
+++ b/templates/401.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container container-main">
     {% include "_flash_messages.html" %}
-    <div class="col-md-12">
+    <div class="col-xs-12">
         <h1>Unauthorized</h1>
         <p class="lead">You are not authorized to access the URL requested.</p>
         <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-inverse">
