--- a/templates/500.html
+++ b/templates/500.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container container-main">
     {% include "_flash_messages.html" %}
-    <div class="col-md-12">
+    <div class="col-xs-12">
         <h1>Ooops, Something's broken</h1>
         <p class="lead">It looks as though there's a problem with our system.</p>
         <p class="lead">We will try to fix it as soon as we can.</p>
