--- a/templates/403.html
+++ b/templates/403.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container container-main">
     {% include "_flash_messages.html" %}
-    <div class="col-md-12">
+    <div class="col-xs-12">
         <h1>Forbidden</h1>
         <p class="lead">You do not have permission to access the requested resource.</p>
         <a id="btnHome" href="{{url_for('home.home')}}" class="btn btn-inverse">
