--- a/templates/projects/task_import_options.html
+++ b/templates/projects/task_import_options.html
@@ -12,7 +12,7 @@
             {% include "_flash_messages.html" %}
             {{ helper.render_project_title(project, subtitle="Import Tasks")}}
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <p class="lead">Use one of the following <strong>importers</strong> to import tasks</p>
                 </div>
             </div>
