--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -1,22 +1,25 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
-{% set active_link = "profile" %}
 {% import "account/_helpers.html" as helper %}
 {% import "projects/_helpers.html" as project_helper %}
 
 {% block content %}
-<span class="set-main-bg" data-bg="pattern-white-wall"></span>
-<div class="container-main">
-    <section class="container">
-        {% include "_flash_messages.html" %}
-        {{ helper.render_user_profile(current_user, upload_method, "settings") }}
-    </section>
+<span class="set-body-bg" data-bg="pattern-white-wall"></span>
+<div class="container container-main">
+    {% include "_flash_messages.html" %}
+    <div class="row">
+        <div class="col-xs-12 col-sm-4 text-center">
+            {{ helper.render_user_profile(current_user, upload_method) }}
+        </div>
 
-    {% if projects_contrib %}
-    <section id="contributed-projects" class="white pattern-white-wall inset-shadow-top">
-        {{project_helper.render_grid_projects(projects_contrib, "Your Contributions", upload_method)}}
-    </section>
-    {% endif %}
-    {{ project_helper.broken_image() }}
+        <div class="col-xs-12 col-sm-8">
+            <div class="white-panel inset-shadow-white">
+                {% if projects_contrib %}
+                    {{project_helper.render_grid_projects(projects_contrib, "Contributions", upload_method)}}
+                {% endif %}
+            </div>
+        </div>
+    </div>
 </div>
+{{ project_helper.broken_image() }}
 {% endblock %}
