--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -6,14 +6,15 @@
 {% import "_formhelpers.html" as form_helper %}
 
 {% block content %}
-<span class="set-body-bg" data-bg="pattern-white-wall"></span>
 <script src="{{url_for('static', filename='js/vendor/jquery.Jcrop.min.js')}}"></script>
-<link rel="stylesheet" href="{{url_for('static', filename='css/jquery.Jcrop.min.css')}}" type="text/css" />
-<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
+<link href="{{url_for('static', filename='css/jquery.Jcrop.min.css')}}" rel="stylesheet" type="text/css" />
+<span class="set-body-bg" data-bg="pattern-white-wall"></span>
 <div class="container container-main">
+    {% include "_flash_messages.html" %}
     <div class="row">
-        <div class="col-sm-6 col-xs-12 text-center">
+
+        <!-- Avatar upload -->
+        <div class="col-xs-12 col-sm-4 text-center">
             <form method="post" role="form" class="upload-img-form" action="{{ url_for('account.update_profile', name=current_user.name) }}" enctype="multipart/form-data">
                 <fieldset>
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
@@ -28,15 +29,14 @@
                     </div>
                     <br>
                     <h1 class="inset-text-grey">{{current_user.fullname}}</h1>
-                    {% include "_flash_messages.html" %}
                     {{ project_helper.render_loading("Loading, please wait...") }}
-                    {%if not current_user.info.avatar%}
-                    <div class="row">
-                        <div class="col-xs-6 col-xs-offset-3 alert alert-info">
-                            <a href="#" class="close" data-dismiss="alert">&times;</a>
-                            Click above to choose your avatar.
+                    {%if not current_user.info.avatar %}
+                        <div class="row">
+                            <div class="col-xs-6 col-xs-offset-3 alert alert-info">
+                                <a href="#" class="close" data-dismiss="alert">&times;</a>
+                                Click above to choose your avatar.
+                            </div>
                         </div>
-                    </div>
                     {% endif %}
 
                     <!-- pybossa-gravatar -->
@@ -70,54 +70,48 @@
             </form>
         </div>
 
-        <div class="col-sm-6 col-xs-12 white-panel inset-shadow">
+        <!-- Update details -->
+        <div class="col-sm-8 col-xs-12">
+            <div class="white-panel inset-shadow-white">
+                <form method="post" role="form" class="form-horizontal" action="{{ url_for('account.update_profile', name=current_user.name) }}">
+                    <fieldset>
+                        <h2>Update your profile</h2>
+                        {{ form.id }}
+                        {{ form.hidden_tag() }}
+                        {{ form_helper.render_field(form.fullname, show_label=True, placeholder="Full name", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
+                        {{ form_helper.render_field(form.name, show_label=True, placeholder="Username", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
+                        {{ form_helper.render_field(form.email_addr, show_label=True, placeholder="Email", class="form-control", type="email" ) }}
+                        {{ form_helper.render_toggle(form.subscribed, label="Email newsletter") }}
+                        {{ form_helper.render_toggle(form.privacy_mode, label="Privacy mode") }}
 
-            <form method="post" role="form" class="form-horizontal" action="{{ url_for('account.update_profile', name=current_user.name) }}">
-                <fieldset>
-                    <h2>Update your profile</h2>
-                    {{ form.id }}
-                    {{ form.hidden_tag() }}
-                    {{ form_helper.render_field(form.fullname, show_label=True, placeholder="Full name", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
-                    {{ form_helper.render_field(form.name, show_label=True, placeholder="Username", class="form-control", required="required", pattern=".{3,35}", title="Must be between 3 and 35 characters" ) }}
-                    {{ form_helper.render_field(form.email_addr, show_label=True, placeholder="Email", class="form-control", type="email" ) }}
-                    <div class="form-group pull-right">
-                        <label for="privacy_mode" class="padding-right-sm">Privacy mode</label>
-                        <input data-toggle="toggle" checked id="privacy_mode" name="privacy_mode" type="checkbox">
-                            <span><small>&nbsp;</small></span>
-                    </div>
-                    <div class="form-group pull-right">
-                        <label for="subscribed" class="padding-right-sm">Email notifications</label>
-                        <input data-toggle="toggle" checked id="subscribed" name="subscribed" type="checkbox">
-                            <span><small>&nbsp;</small></span>
-                    </div>
-                    {{ form_helper.render_field(form.locale, class="hidden") }}
-                    <div class="pull-right form-actions" role="group">
-                        <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-default">Cancel</a>
-                        <button type="submit" name="btn" value="Profile" class="btn btn-success" >Save</button>
-                    </div>
-                </fieldset>
-            </form>
-            {% if show_passwd_form %}
-            <hr class="extra-margins">
-            <h2 {% if password_form.errors %} name="password" {%endif%}>Change your Password</h2>
-            <form method="post" class="form-horizontal" action="{{ url_for('account.update_profile', name=current_user.name) }}">
-                <fieldset>
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                    {{ password_form.id }}
-                    {{ password_form.hidden_tag() }}
-                    {{ form_helper.render_field(password_form.current_password, show_label=True, placeholder="Current password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
-                    {{ form_helper.render_field(password_form.new_password, show_label=True, placeholder="New password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
-                    {{ form_helper.render_field(password_form.confirm, show_label=True, placeholder="Confirm new password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
-                    <div class="pull-right form-actions" role="group">
-                        <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-default">Cancel</a>
-                        <button type="submit" name="btn" value="Password" class="btn btn-success" >Save</button>
-                    </div>
-                </fieldset>
-            </form>
-            {% endif %}
+                        {{ form_helper.render_field(form.locale, class="hidden") }}
+                        <div class="pull-right form-actions" role="group">
+                            <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-default">Cancel</a>
+                            <button type="submit" name="btn" value="Profile" class="btn btn-success" >Save</button>
+                        </div>
+                    </fieldset>
+                </form>
+                {% if show_passwd_form %}
+                <hr class="extra-margins">
+                <h2 {% if password_form.errors %} name="password" {%endif%}>Change your Password</h2>
+                <form method="post" class="form-horizontal" action="{{ url_for('account.update_profile', name=current_user.name) }}">
+                    <fieldset>
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                        {{ password_form.id }}
+                        {{ password_form.hidden_tag() }}
+                        {{ form_helper.render_field(password_form.current_password, show_label=True, placeholder="Current password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
+                        {{ form_helper.render_field(password_form.new_password, show_label=True, placeholder="New password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
+                        {{ form_helper.render_field(password_form.confirm, show_label=True, placeholder="Confirm new password", class="form-control", type="password", required="required", pattern=".{6,}", title="Must be a minimum of 6 characters") }}
+                        <div class="pull-right form-actions" role="group">
+                            <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn btn-default">Cancel</a>
+                            <button type="submit" name="btn" value="Password" class="btn btn-success" >Save</button>
+                        </div>
+                    </fieldset>
+                </form>
+                {% endif %}
+            </div>
         </div>
     </div>
 <script src="{{url_for('static', filename='js/image_crop.js')}}" type="text/javascript"></script>
-
 {{ project_helper.broken_image() }}
 {% endblock %}
