--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -89,14 +89,20 @@
 </div>
 {% endmacro %}
 
-{% macro render_project_short_summary(project, upload_method, append) %}
+{% macro render_project_short_summary(project) %}
 <div class="row padding-bottom-sm">
     <div class="col-xs-9">
         <h4><a href="{{url_for('project.tasks', short_name=project.short_name)}}">{{project.name}}</a></h4>
     </div>
     <div class="text-center">
         <div class="col-xs-3 text-center">
-            {{ append }}
+            {% if project.overall_progress >= 100 %}
+                <span class="fa fa-check-square-o"></span>
+            {% elif project.overall_progress > 0 or project.published %}
+                {{ project.overall_progress | round | int }}% complete
+            {% else %}
+                Unpublished
+            {% endif %}
         </div>
     </div>
 </div>
@@ -272,26 +278,18 @@ function imgError(image) {
 {% endmacro %}
 
 {% macro render_grid_projects(projects, title, upload_method) %}
-<div class="container container-padded">
-    <div class="row text-center">
-        <h3>{{title}}</h3>
-    </div>
-
-    <div class="col-xs-12">
-        <div class="polaroids">
-        {% for project in projects %}
-            {{ show_project(project, "none", current_user, upload_method) }}
-        {% endfor %}
-        </div>
-    </div>
-</div>
+<h2>{{ title }}</h2>
+<hr>
+{% for project in projects %}
+    {{ render_project_short_summary(project) }}
+{% endfor %}
 {% endmacro %}
 
 {% macro render_loading(text) %}
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-xs-12">
         <div id="loading" class="alert alert-info" style="display:none;">
-            <span class="fa fa-refresh spinning"></span> {{text}}
+            <span class="fa fa-refresh fa-spin"></span> {{text}}
         </div>
     </div>
 </div>
